<resources>
    <string name="app_name">SyouCloud</string>
    <string name="alarm">Alarm</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="mail">Mail</string>
    <string name="userName">little_csd</string>
    <string name="level">Lv.4</string>
    <string name="music_list">My Music List</string>
    <string name="local_music">Local Music</string>
    <string name="recent_play">Recent play</string>
    <string name="manage_downloads">Manage downloads</string>
    <string name="favourites">Favs</string>
    <string name="mix_created">Mix Created</string>
    <string name="input_title">Mix title</string>
    <string name="password">Password</string>
    <string name="password_again">input password again</string>
    <string name="back">Return</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="search">Search</string>
    <string name="no_result">No result</string>
</resources>
