<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/add_mix_title"
        android:hint="@string/input_title"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/add_mix_password"
        android:maxLines="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/add_mix_password_again"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>